# Autostereogram_Builder

./: README.md  package-lock.json  package.json
.github/workflows/: build.yml
src/: App.css  App.jsx  Canvas.jsx  StereogramStage.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
